--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,4 +13,4 @@ jobs:
       - name: test
         run: |
           npm ci 
-            npm run test >> test-results.txt
+            npm run test
