--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,4 +20,4 @@ jobs:
       - run: npm test -- --ci --reporters=default --reporters=jest-junit
       - name: update Airtable
         if: always ()
-        run: node ../airtableScript.js {{github.actor}} {{github.repository}}
+        run: node airtableScript.js {{github.actor}} {{github.repository}}
