--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    environment: AIRTABLE_API_KEY
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
